force-app/main/default/objects/Scenario__c/Scenario__c.object-meta.xml
<CustomObject>
    <label>Scenario</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>