force-app/main/default/objects/Scenario__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>