force-app/main/default/objects/Scenario__c/fields/Objective_Mode__c.field-meta.xml
<CustomField>
    <fullName>Objective_Mode__c</fullName>
    <label>Objective Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>