force-app/main/default/objects/Scenario__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>