force-app/main/default/objects/Scenario__c/fields/Scenario_Key__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Key__c</fullName>
    <externalId>true</externalId>
    <label>Scenario Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>