force-app/main/default/objects/Scenario__c/fields/Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Type__c</fullName>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Demand Surge</fullName>
            </value>
            <value>
                <fullName>Weather Event</fullName>
            </value>
            <value>
                <fullName>Price Spike</fullName>
            </value>
            <value>
                <fullName>Battery Optimization</fullName>
            </value>
            <value>
                <fullName>Cloud Front</fullName>
            </value>
            <value>
                <fullName>Battery Outage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>