force-app/main/default/objects/Scenario__c/fields/Time_Horizon_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon_Hours__c</fullName>
    <label>Time Horizon Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>